--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>Jean-François Beauchef's GitHub page</title>
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+</head>
 <body>
-<h1>Jean-François Beauchef</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <img alt="logo" class="img-responsive logo" src="https://en.gravatar.com/userimage/27150847/5ab51dc34c4db22c39d135112bb38d20.jpg">
+        </div>
+        <div class="col-md-8 text-right text-uppercase">
+            <h1 class="text-thin">Jean François Beauchef</h1>
+            <h4>Developer</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <hr class="line-separator">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <img alt="banner" class="img-responsive" src="http://lorempixel.com/g/1140/350/nature/3/">
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
