Site generated by Jekyll

--- a/index.html
+++ b/index.html
@@ -1,39 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Jean-François Beauchef's GitHub page</title>
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <img alt="logo" class="img-responsive logo" src="https://en.gravatar.com/userimage/27150847/5ab51dc34c4db22c39d135112bb38d20.jpg">
-        </div>
-        <div class="col-md-8 text-right text-uppercase">
-            <h1 class="text-thin">Jean François Beauchef</h1>
-            <h4>Developer</h4>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <hr class="line-separator">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <img alt="banner" class="img-responsive" src="http://lorempixel.com/g/1140/350/nature/3/">
-        </div>
-    </div>
+---
+layout: page
+title: About
+---
+<div class="mdl-grid portfolio-copy">
+<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+    <p>
+        Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+    </p>
 </div>
-
-</body>
-</html>
+<h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Irure mollit est sit labore</h3>
+<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
+    <p>
+        Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+    </p>
+</div>
+</div>
